# eval-llm-based-apps-jan2025

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  reqirements-dev.txt  requirements.txt
solutions/: workshop_solutions.ipynb
workshop/: workshop_materials.ipynb
